--- a/pulsar-client-shaded/pom.xml
+++ b/pulsar-client-shaded/pom.xml
@@ -220,8 +220,8 @@
                   <shadedPattern>org.apache.pulsar.shade.org.checkerframework</shadedPattern>
                 </relocation>
                 <relocation>
-                  <pattern>javax.annotation</pattern>
-                  <shadedPattern>org.apache.pulsar.shade.javax.annotation</shadedPattern>
+                  <pattern>jakarta.annotation</pattern>
+                  <shadedPattern>org.apache.pulsar.shade.jakarta.annotation</shadedPattern>
                 </relocation>
                 <relocation>
                   <pattern>io.swagger</pattern>
